@@ -60,6 +60,7 @@
    - ofa_idate_filter_setup_bin(): use a GResource path.
    - ofaIPrefsPage: have an error message on init() and apply() methods.
    - ofaPage: migrate to G_ADD_PRIVATE (todo #994).
+   - ofaMysqlConnect: migrate to G_ADD_PRIVATE (todo #994).
    - ofaPlugin: migrate to G_ADD_PRIVATE (todo #994).
    - ofaPReferences: move user interface to GResource (todo #826).
    - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).
